--- a/study-media/app/sass/blocks/cost.scss
+++ b/study-media/app/sass/blocks/cost.scss
@@ -73,3 +73,27 @@
     background: #32004b;
   }
 }
+
+@media screen and ($tablet-widths) {
+  
+}
+
+@media screen and ($mobile-widths) {
+  .cost__table {
+    display: block;
+    overflow-x: scroll;
+  }
+  
+  .cost__th {
+    font-size: 16px;
+  }
+  
+  .cost__td {
+    padding: 10px;
+    font-size: 13px;
+    
+    &--summary {
+      font-size: 20px;
+    }
+  }
+}
