--- a/study-media/app/sass/blocks/edge.scss
+++ b/study-media/app/sass/blocks/edge.scss
@@ -32,8 +32,8 @@
   width: 537px;
   height: 537px;
   background: url('../img/edge-mockup.png') no-repeat center / contain;
-  animation: edge-mockup-rotate-reverse 2s infinite alternate;
-  transform: rotate(-10deg);
+  // animation: edge-mockup-rotate-reverse 2s infinite alternate;
+  // transform: rotate(-10deg);
   
   &::before {
     content: '';
@@ -41,10 +41,10 @@
     top: 75px;
     left: 60px;
     box-sizing: border-box;
-    width: 400px;
-    height: 400px;
+    width: 380px;
+    height: 380px;
     border: 10px solid $main-yellow;
-    animation: edge-mockup-rotate 2s infinite alternate;
+    // animation: edge-mockup-rotate 2s infinite alternate;
     transform: rotate(-30deg);
   }
 }
@@ -62,5 +62,38 @@
   
   100% {
     transform: rotate(-80deg);
+  }
+}
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .edge {
+    padding: 0 0 50px 0;
+  }
+  
+  .edge__flex {
+    flex-direction: column;
+  }
+  
+  .edge__content {
+    width: auto;
+  }
+  
+  .edge__text {
+    
+    &:first-of-type {
+      margin: 30px 0 0 0;
+    }
+  }
+  
+  .edge__mockup {
+    width: 300px;
+    height: 300px;
+    
+    &::before {
+      width: 200px;
+      height: 200px;
+    }
   }
 }
