--- a/study-media/app/sass/blocks/nav.scss
+++ b/study-media/app/sass/blocks/nav.scss
@@ -12,7 +12,8 @@
   margin: 0 30px 0 0;
   transition: 0.3s;
   
-  &:hover {
+  &:hover,
+  &:focus {
     transform: translateY(-5px);
   }
 }
@@ -27,21 +28,30 @@
 }
 
 .nav__link {
-  padding: 0 0 36px 0;
+  padding: 40px 0 36px 0;
   color: #000;
   font-size: 18px;
   font-weight: normal;
   text-decoration: none;
   border-bottom: 4px solid transparent;
-  transition: 0.3s;
+  transition: 0.5s;
   
-  &:hover {
+  &:hover,
+  &:focus {
     color: $main-red;
     border-bottom: 4px solid $main-red;
   }
   
   &--phone {
-    padding: 0 0 36px 30px;
-    background: url('../img/svg/phone.svg') no-repeat top left / 20px;
+    padding: 40px 0 36px 30px;
+    background: url('../img/svg/phone.svg') no-repeat left / 20px;
+  }
+}
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .nav {
+    display: none;
   }
 }
