--- a/study-media/app/sass/blocks/process.scss
+++ b/study-media/app/sass/blocks/process.scss
@@ -110,3 +110,32 @@
 .process__button {
   margin: auto;
 }
+
+@media screen and ($tablet-widths) {
+  
+}
+
+@media screen and ($mobile-widths) {
+  .process {
+    padding: 100px 0 50px 0;
+  }
+  
+  .process__subtext {
+    margin: 30px 0;
+    padding: 0;
+    font-size: 16px;
+  }
+  
+  .process__flex {
+    flex-direction: column;
+  }
+  
+  .process__box {
+    width: 300px;
+    margin: 0 0 30px 0;
+  }
+  
+  .process__text {
+    margin: 0 0 0 20px;
+  }
+}
