--- a/study-media/app/sass/blocks/start.scss
+++ b/study-media/app/sass/blocks/start.scss
@@ -103,3 +103,29 @@
 .start__button {
   margin: auto;
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .start {
+    padding: 50px 0;
+  }
+  
+  .start__subtext {
+    margin: 30px 0;
+  }
+  
+  .start__flex {
+    flex-direction: column;
+    margin: 0;
+    
+    &::before {
+      display: none;
+    }
+  }
+  
+  .start__box {
+    width: 300px;
+    margin: 0 0 30px 0;
+  }
+}
