--- a/study-media/app/sass/blocks/warranty.scss
+++ b/study-media/app/sass/blocks/warranty.scss
@@ -59,3 +59,28 @@
     left: -50px;
   }
 }
+
+@media screen and ($tablet-widths) {
+
+}
+
+@media screen and ($mobile-widths) {
+  .warranty__flex {
+    flex-direction: column;
+  }
+  
+  .warranty__content {
+    width: auto;
+    margin: 0 0 30px 0;
+  }
+  
+  .warranty__mockup {
+    width: 300px;
+    height: 300px;
+    
+    &::before {
+      width: 300px;
+      height: 300px;
+    }
+  }
+}
