--- a/study-media/app/sass/blocks/header.scss
+++ b/study-media/app/sass/blocks/header.scss
@@ -2,7 +2,18 @@
   position: fixed;
   top: 0;
   width: 100%;
+  padding: 15px 0;
   background: rgba(255, 255, 255, 0.9);
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.15);
   z-index: 1;
+}
+
+@media screen and ($tablet-widths) {
+  
+}
+
+@media screen and ($mobile-widths) {
+  .header {
+    position: relative;
+  }
 }
