--- a/study-media/app/sass/blocks/nav.scss
+++ b/study-media/app/sass/blocks/nav.scss
@@ -20,7 +20,6 @@
 
 .nav__item {
   margin: 0 30px 0 0;
-  padding: 40px 0;
   
   &:last-child {
     margin: 0;
@@ -50,13 +49,28 @@
 
 .nav__open {
   display: none;
+  margin: 0;
+  width: 30px;
+  height: 30px;
+  font-size: 0;
+  border: none;
+  background: url('../img/svg/nav.svg') no-repeat center / cover;
+  transition: 0.5s;
+  
+  &--close {
+    position: fixed;
+    top: 38px;
+    right: 15px;
+    background: url('../img/svg/close.svg') no-repeat center / cover;
+    z-index: 2;
+  }
 }
 
 @media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {
   .nav__list {
-    padding: 10px 0;
+    // padding: 10px 0;
     
     &--mobile {
       position: fixed;
@@ -64,22 +78,37 @@
       left: 0;
       @include display-flex;
       flex-direction: column;
-      justify-content: space-between;
-      box-sizing: border-box;
-      width: 100vw;
+      justify-content: center;
+      // box-sizing: border-box;
+      width: 100%;
       height: 100vh;
       background: #fff;
-      transform: translateY(-100%);
-      
-      &--show {
-        transform: translateY(0%);
-      }  
+      transition: 0.5s;
+      transform: translateY(-100%); 
     }
+    
+    &--show {
+      transform: translateY(0%);
+    } 
   }
   
   .nav__item {
     margin: 0;
-    padding: 50px 0;
+    padding: 0 0 30px 0;  
+  }
+  
+  .nav__link {
+    padding: 0;
+    border: none;
+    
+    &--phone {
+      padding: 0 0 0 30px;
+    }
+    
+    &:hover,
+    &:focus {
+      border: none;
+    }
   }
   
   .nav__logo {
