--- a/study-media/app/sass/blocks/square.scss
+++ b/study-media/app/sass/blocks/square.scss
@@ -59,3 +59,11 @@
     left: -100px;
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .square {
+    display: none;
+  }
+}
