--- a/study-media/app/sass/blocks/warranty.scss
+++ b/study-media/app/sass/blocks/warranty.scss
@@ -79,8 +79,20 @@
     height: 300px;
     
     &::before {
+      top: -10px;
+      left: -10px;
       width: 300px;
       height: 300px;
+      // animation: none;
+    }
+  }
+  
+  @keyframes mockup {
+    0% {}
+    
+    100% {
+      top: 0;
+      left: 0;
     }
   }
 }
