--- a/study-media/app/sass/blocks/stages.scss
+++ b/study-media/app/sass/blocks/stages.scss
@@ -70,7 +70,9 @@
 }
 
 @media screen and ($tablet-widths) {
-  
+  .stages__list {
+    flex-wrap: wrap;
+  }
 }
 
 @media screen and ($mobile-widths) {
