--- a/study-media/app/sass/blocks/warranty.scss
+++ b/study-media/app/sass/blocks/warranty.scss
@@ -61,7 +61,9 @@
 }
 
 @media screen and ($tablet-widths) {
-
+  .warranty__flex {
+    flex-wrap: wrap;
+  }
 }
 
 @media screen and ($mobile-widths) {
