--- a/study-media/app/sass/global/base.scss
+++ b/study-media/app/sass/global/base.scss
@@ -11,6 +11,24 @@ body {
   padding: 0 15px;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #fff;
+  border: 1px solid #e1e1e1;
+}
+
+::-webkit-scrollbar-thumb {
+  // border-radius: 10px;
+  background: $main-yellow; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: darken($main-yellow, 5%); 
+}
+
 @media screen and ($tablet-widths) {
   .container {
     width: 100%;
