--- a/study-media/app/sass/blocks/header.scss
+++ b/study-media/app/sass/blocks/header.scss
@@ -8,9 +8,7 @@
   z-index: 1;
 }
 
-@media screen and ($tablet-widths) {
-  
-}
+@media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {
   .header {
