--- a/study-media/app/sass/blocks/title.scss
+++ b/study-media/app/sass/blocks/title.scss
@@ -1,29 +1,20 @@
 .title {
   margin: 0 0 120px 0;
   padding: 210px 0 130px 0;
-  background: url('../img/title-bg.png') no-repeat top left;
-}
-
-.title__content {
-  width: 560px;
-  margin: 0 0 0 auto;
 }
 
 .title__text {
-  padding: 10px 20px;
+  margin: 170px 0 30px 0;
   font-size: 18px;
   font-weight: normal;
-  text-align: center;
-  border-top: 2px solid $main-red;
-  border-bottom: 2px solid $main-red;
 }
 
 .title__flex {
   @include display-flex;
-  justify-content: space-between;
 }
 
 .title__warning {
+  margin: 0 70px 0 0;
   font-size: 18px;
   font-weight: 600;
 }
