--- a/study-media/app/sass/blocks/nav.scss
+++ b/study-media/app/sass/blocks/nav.scss
@@ -27,9 +27,10 @@
 }
 
 .nav__link {
-  padding: 40px 0 36px 0;
+  // padding: 40px 0 36px 0;
+  padding: 30px 0 27px 0;
   color: #000;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: normal;
   text-decoration: none;
   border-bottom: 4px solid transparent;
@@ -42,7 +43,7 @@
   }
   
   &--phone {
-    padding: 40px 0 36px 30px;
+    padding: 30px 0 27px 30px;
     background: url('../img/svg/phone.svg') no-repeat left / 20px;
   }
 }
