--- a/study-media/app/sass/blocks/cost.scss
+++ b/study-media/app/sass/blocks/cost.scss
@@ -41,7 +41,7 @@
 
 .cost__td {
   padding: 15px;
-  color: #777777;
+  color: #494949;
   font-size: 14px;
   font-weight: normal;
   text-align: center;
@@ -72,6 +72,10 @@
     color: #fff;
     background: #32004b;
   }
+  
+  &--media {
+    background: $main-yellow;
+  }
 }
 
 @media screen and ($tablet-widths) {
@@ -81,11 +85,17 @@
 @media screen and ($mobile-widths) {
   .cost__table {
     display: block;
+    padding: 0 0 10px 0;
     overflow-x: scroll;
+    
+    &::-webkit-scrollbar {
+      // width: 5px;
+      height: 5px;
+    }
   }
   
   .cost__th {
-    font-size: 16px;
+    font-size: 15px;
   }
   
   .cost__td {
@@ -93,7 +103,12 @@
     font-size: 13px;
     
     &--summary {
+      padding: 15px 10px;
       font-size: 20px;
+    }
+    
+    &--small {
+      padding: 0;
     }
   }
 }
