--- a/study-media/app/sass/blocks/reviews.scss
+++ b/study-media/app/sass/blocks/reviews.scss
@@ -232,7 +232,7 @@
   }
   
   .reviews__slider {
-    width: 90%;
+    width: 100%;
   }
   
   .reviews__item {
@@ -256,6 +256,7 @@
   }
   
   .reviews__quote {
-    height: 200px;
+    height: 250px;
+    font-size: 15px;
   }
 }
