--- a/study-media/app/sass/blocks/edge.scss
+++ b/study-media/app/sass/blocks/edge.scss
@@ -93,6 +93,10 @@
     &:first-of-type {
       margin: 30px 0 0 0;
     }
+    
+    &--red {
+      font-size: 18px;
+    }
   }
   
   .edge__mockup {
