--- a/study-media/app/sass/blocks/nav.scss
+++ b/study-media/app/sass/blocks/nav.scss
@@ -27,7 +27,6 @@
 }
 
 .nav__link {
-  // padding: 40px 0 36px 0;
   padding: 30px 0 27px 0;
   color: #000;
   font-size: 16px;
@@ -88,8 +87,11 @@
 }
 
 @media screen and ($mobile-widths) {
+  .nav {
+    justify-content: space-between;
+  }
+  
   .nav__list {
-    // padding: 10px 0;
     
     &--mobile {
       position: fixed;
