--- a/study-media/app/sass/blocks/process.scss
+++ b/study-media/app/sass/blocks/process.scss
@@ -119,7 +119,7 @@
 
 @media screen and ($mobile-widths) {
   .process {
-    padding: 100px 0 50px 0;
+    padding: 70px 0;
   }
   
   .process__subtext {
@@ -135,6 +135,10 @@
   .process__box {
     width: 300px;
     margin: 0 0 30px 0;
+    
+    &:last-child {
+      margin: 0;
+    }
   }
   
   .process__text {
