--- a/study-media/app/sass/blocks/specialty.scss
+++ b/study-media/app/sass/blocks/specialty.scss
@@ -1,5 +1,6 @@
 .specialty {
   position: relative;
+  padding: 0 0 20px 0;
   
   &::before {
     content: '';
@@ -13,21 +14,9 @@
   }
 }
 
-.specialty__name {
-  margin: 0 0 50px 0;
-  color: $main-red;
-  font-size: 70px;
-  font-weight: 500;
-  text-align: center;
-  
-  &--small {
-    font-size: 40px;
-  }
-}
-
 .specialty__list {
   @include clear-list;
-  margin: 40px 0;
+  margin: 40px 0 0 0;
   overflow: hidden;
 }
 
@@ -41,16 +30,16 @@
   @include display-flex;
   justify-content: space-between;
   box-sizing: border-box;
-  width: 100%;
+  // width: 100%;
   height: 325px;
-  padding: 40px 30px;
+  padding: 40px 25px;
   background: #fff;
   box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.3);
 }
 
 .specialty__content {
-  width: 40%;
-  margin: 0 30px 0 0;
+  // width: 40%;
+  // margin: 0 30px 0 0;
 }
 
 .specialty__title {
@@ -58,7 +47,6 @@
   color: $main-red;
   font-size: 15px;
   font-weight: normal;
-  transition: 0.3s;
 }
 
 .specialty__text {
@@ -66,13 +54,12 @@
   font-size: 14px;
   font-weight: 200;
   line-height: 150%;
-  transition: 0.3s;
   
-  &--center {
-    position: relative;
-    text-align: center;
-    z-index: 1;
-  }
+  // &--center {
+  //   position: relative;
+  //   text-align: center;
+  //   z-index: 1;
+  // }
 }
 
 .specialty__logo {
@@ -94,15 +81,24 @@
 }
 
 @media screen and ($mobile-widths) {
+  .specialty {
+    padding: 20px 0;
+  }
+  
   .specialty__box {
     flex-direction: column;
-    // height: 500px;
-    padding: 20px;
+    height: 300px;
+    padding: 20px 15px;
   }
   
   .specialty__content {
     width: auto;
     margin: 0;
+    text-align: center;
+  }
+  
+  .specialty__text {
+    margin: 0 0 40px 0;
   }
   
   .specialty__img {
