--- a/study-media/app/sass/global/base.scss
+++ b/study-media/app/sass/global/base.scss
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   min-width: 320px;
   margin: 0;
@@ -21,7 +25,6 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  // border-radius: 10px;
   background: $main-yellow; 
 }
 
