--- a/study-media/app/sass/blocks/popup.scss
+++ b/study-media/app/sass/blocks/popup.scss
@@ -141,3 +141,30 @@
     visibility: visible;
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .popup {
+    width: 95%;
+  }
+  
+  .popup__content {
+    padding: 50px 15px 20px 15px;
+  }
+  
+  .popup__name {
+    padding: 0;
+    font-size: 18px;
+    text-align: center;
+  }
+  
+  .popup__warning {
+    margin: 0;
+    font-size: 12px;
+  }
+  
+  .popup__img {
+    display: none;
+  }
+}
