--- a/study-media/app/sass/blocks/title.scss
+++ b/study-media/app/sass/blocks/title.scss
@@ -1,9 +1,10 @@
 .title {
-  padding: 200px 0;
+  padding: 200px 0 50px 0;
+  background: url('../img/title-bg.jpg') no-repeat center / cover;
 }
 
 .title__text {
-  margin: 170px 0 30px 0;
+  margin: 150px 0 30px 0;
   font-size: 18px;
   font-weight: normal;
   line-height: 150%;
@@ -23,7 +24,8 @@
 
 @media screen and ($mobile-widths) {
   .title {
-    padding: 100px 0 0 0;
+    padding: 100px 0 50px 0;
+    background: url('../img/title-bg-mobile.jpg') no-repeat center / cover;
   }
   
   .title__text {
