--- a/study-media/app/sass/style.scss
+++ b/study-media/app/sass/style.scss
@@ -21,5 +21,7 @@
 @import 'blocks/cost';
 @import 'blocks/reviews';
 @import 'blocks/contact';
+@import 'blocks/request';
+@import 'blocks/footer';
 
 @import 'blocks/popup';
