--- a/study-media/app/sass/blocks/specialty.scss
+++ b/study-media/app/sass/blocks/specialty.scss
@@ -70,7 +70,7 @@
 
 .specialty__img {
   box-sizing: border-box;
-  width: 45%;
+  // width: 45%;
   height: 215px;
   border: 10px solid $main-yellow;
   object-fit: cover;
