--- a/study-media/app/sass/blocks/advantages.scss
+++ b/study-media/app/sass/blocks/advantages.scss
@@ -1,5 +1,5 @@
 .advantages {
-  padding: 0 0 100px 0;
+  padding: 100px 0;
 }
 
 .advantages__inner {
@@ -137,7 +137,7 @@
 .advantages__text {
   margin: 0;
   font-size: 16px;
-  font-weight: 200;
+  font-weight: 400;
   line-height: 150%;
 }
 
@@ -167,6 +167,7 @@
   
   .advantages__box {
     padding: 20px;
+    height: 600px;
   }
   
   .advantages__content {
@@ -184,6 +185,10 @@
     &--label {
       font-size: 16px;
     }
+  }
+  
+  .advantages__text {
+    font-size: 15px;
   }
   
   .advantages__img {
