--- a/study-media/app/sass/blocks/specialty.scss
+++ b/study-media/app/sass/blocks/specialty.scss
@@ -38,7 +38,7 @@
 }
 
 .specialty__content {
-  // width: 40%;
+  width: 50%;
   // margin: 0 30px 0 0;
 }
 
@@ -52,7 +52,7 @@
 .specialty__text {
   margin: 0 10px 40px 0;
   font-size: 14px;
-  font-weight: 200;
+  font-weight: 400;
   line-height: 150%;
   
   // &--center {
