--- a/study-media/app/sass/blocks/specialty.scss
+++ b/study-media/app/sass/blocks/specialty.scss
@@ -15,13 +15,14 @@
 }
 
 .specialty__list {
+  height: 370px;
   @include clear-list;
   margin: 40px 0 0 0;
   overflow: hidden;
 }
 
 .specialty__item {
-  margin: 10px 30px;
+  margin: 20px 30px;
   outline: none;
   transition: 0.3s;
 }
@@ -30,16 +31,15 @@
   @include display-flex;
   justify-content: space-between;
   box-sizing: border-box;
-  // width: 100%;
   height: 325px;
   padding: 40px 25px;
   background: #fff;
   box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.3);
+  transition: 0.3s;
 }
 
 .specialty__content {
   width: 50%;
-  // margin: 0 30px 0 0;
 }
 
 .specialty__title {
@@ -47,6 +47,7 @@
   color: $main-red;
   font-size: 15px;
   font-weight: normal;
+  transition: 0.3s;
 }
 
 .specialty__text {
@@ -54,12 +55,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 150%;
-  
-  // &--center {
-  //   position: relative;
-  //   text-align: center;
-  //   z-index: 1;
-  // }
+  transition: 0.3s;
 }
 
 .specialty__logo {
@@ -74,6 +70,26 @@
   height: 215px;
   border: 10px solid $main-yellow;
   object-fit: cover;
+}
+
+.slick-center {
+  
+  .specialty__item {
+    
+  }
+  
+  .specialty__box {
+    // margin: -15px 0 0 0;
+    transform: scale(1.1);
+  }
+  
+  .specialty__title {
+    font-size: 25px;
+  }
+  
+  .specialty__text {
+    font-size: 18px;
+  }
 }
 
 @media screen and ($tablet-widths) {
