--- a/study-media/app/sass/blocks/edge.scss
+++ b/study-media/app/sass/blocks/edge.scss
@@ -104,6 +104,8 @@
     height: 300px;
     
     &::before {
+      top: 50px;
+      left: 50px;
       width: 200px;
       height: 200px;
     }
