--- a/study-media/app/sass/blocks/start.scss
+++ b/study-media/app/sass/blocks/start.scss
@@ -1,5 +1,5 @@
 .start {
-  padding: 200px 0 50px 0;
+  padding: 150px 0 0 0;
 }
 
 .start__name {
@@ -129,7 +129,7 @@
   }
   
   .start__box {
-    width: 300px;
+    width: 100%;
     margin: 0 0 30px 0;
   }
 }
