--- a/study-media/app/sass/blocks/advantages.scss
+++ b/study-media/app/sass/blocks/advantages.scss
@@ -1,5 +1,5 @@
 .advantages {
-  padding: 100px 0;
+  padding: 150px 0 100px 0;
 }
 
 .advantages__inner {
@@ -167,7 +167,7 @@
   
   .advantages__box {
     padding: 20px;
-    height: 600px;
+    height: auto;
   }
   
   .advantages__content {
