--- a/study-media/app/sass/blocks/process.scss
+++ b/study-media/app/sass/blocks/process.scss
@@ -102,7 +102,7 @@
 .process__logo {
   position: absolute;
   top: 0;
-  left: -30px;
+  left: -28px;
   padding: 0 0 10px 0;
   background: #fff;
 }
@@ -133,7 +133,7 @@
   }
   
   .process__box {
-    width: 300px;
+    width: 90%;
     margin: 0 0 30px 0;
     
     &:last-child {
@@ -142,6 +142,6 @@
   }
   
   .process__text {
-    margin: 0 0 0 20px;
+    // margin: 0 0 0 20px;
   }
 }
