--- a/study-media/app/sass/blocks/reviews.scss
+++ b/study-media/app/sass/blocks/reviews.scss
@@ -35,6 +35,7 @@
 }
 
 .reviews__subtext {
+  position: relative;
   width: 300px;
   margin: 0;
   font-size: 24px;
@@ -47,6 +48,20 @@
     font-size: 18px;
     font-weight: normal;
     text-align: right;
+    
+    &::before {
+      display: none;
+    }
+  }
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: -100px;
+    left: -40px;
+    width: 195px;
+    height: 140px;
+    background: url('../img/quote.png') no-repeat center / cover;
   }
 }
 
@@ -136,12 +151,11 @@
   &::after {
     content: '';
     position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 175px;
-    height: 165px;
-    background: #ebebeb;
-    z-index: -1;
+    top: 0;
+    right: -90px;
+    width: 129px;
+    height: 93px;
+    background: url('../img/quote.png') no-repeat center / cover;
   }
 }
 
@@ -220,6 +234,10 @@
     &--red {
       margin: 10px 0 0 0;
     }
+    
+    &::before {
+      display: none;
+    }
   }
   
   .reviews__flex {
@@ -245,6 +263,10 @@
   
   .reviews__figure {
     width: 100%;
+    
+    &::after {
+      display: none;
+    }
   }
   
   .reviews__img {
