--- a/study-media/app/sass/blocks/specialty.scss
+++ b/study-media/app/sass/blocks/specialty.scss
@@ -67,6 +67,10 @@
   @include clear-list;
 }
 
+.specialty__uni {
+  margin: 0 10px 0 0;
+}
+
 .specialty__img {
   box-sizing: border-box;
   // width: 45%;
