--- a/study-media/app/sass/blocks/stages.scss
+++ b/study-media/app/sass/blocks/stages.scss
@@ -27,7 +27,7 @@
   @include display-flex;
   justify-content: space-between;
   @include clear-list;
-  margin: 70px 0 0 0;
+  margin: 70px 0 30px 0;
 }
 
 .stages__item {
