--- a/study-media/app/sass/blocks/title.scss
+++ b/study-media/app/sass/blocks/title.scss
@@ -29,7 +29,7 @@
 @media screen and ($mobile-widths) {
   .title {
     padding: 100px 0 50px 0;
-    background: url('../img/title-bg-mobile.jpg') no-repeat center / cover;
+    background: none;
   }
   
   .title__text {
