--- a/study-media/app/sass/blocks/button.scss
+++ b/study-media/app/sass/blocks/button.scss
@@ -29,7 +29,7 @@
   
   &--small {
     width: 110px;
-    margin: 0 0 0 10px;
+    // margin: 0 0 0 10px;
     padding: 8px;
     font-size: 12px;
   }
