--- a/study-media/app/sass/blocks/heading.scss
+++ b/study-media/app/sass/blocks/heading.scss
@@ -27,6 +27,13 @@
   &--smallest {
     font-size: 28px;
   }
+  
+  &--kostil {
+    display: block;
+    margin: 20px 0 0 0;
+    font-size: 27px;
+    line-height: 150%;
+  }
 }
 
 @media screen and ($tablet-widths) {}
