--- a/study-media/app/sass/blocks/reviews.scss
+++ b/study-media/app/sass/blocks/reviews.scss
@@ -36,10 +36,11 @@
 
 .reviews__subtext {
   position: relative;
-  width: 300px;
+  width: 350px;
   margin: 0;
-  font-size: 24px;
+  font-size: 22px;
   font-weight: normal;
+  // line-height: 150%;
   
   &--red {
     display: block;
@@ -227,6 +228,7 @@
   }
   
   .reviews__subtext {
+    width: auto;
     margin: 0 0 30px 0;
     font-size: 16px;
     text-align: center;
