--- a/study-media/app/sass/blocks/stages.scss
+++ b/study-media/app/sass/blocks/stages.scss
@@ -34,24 +34,11 @@
   position: relative;
   box-sizing: border-box;
   width: 250px;
-  // margin: 0 30px 0 0;
   padding: 30px 0 30px 40px;
   background: url('../img/stage-arrow.png') no-repeat center / cover;
   
-  &:nth-child(1) {
-
-  }
-  
   &:nth-child(2) {
     background: url('../img/stage-media.png') no-repeat center / cover;
-  }
-  
-  &:nth-child(3) {
-
-  }
-  
-  &:nth-child(4) {
-
   }
   
   &:nth-child(5) {
@@ -85,29 +72,19 @@
   
   .stages__item {
     width: 300px;
-    margin: 0 0 40px 0;
-    background: url('../img/stage-square.png') no-repeat center / cover;
-    
-    &:nth-child(1) {
-      // background: url('../img/stages-1-mobile.png') no-repeat center / cover;
-    }
+    margin: 0 0 30px 0;
+    padding: 30px 0;
+    text-align: center;
+    background: url('../img/stage-square.png') no-repeat center / 300px 140px;
     
     &:nth-child(2) {
-      // background: url('../img/stages-2-mobile.png') no-repeat center / cover;
-    }
-    
-    &:nth-child(3) {
-      // background: url('../img/stages-3-mobile.png') no-repeat center / cover;
-    }
-    
-    &:nth-child(4) {
-      // background: url('../img/stages-4-mobile.png') no-repeat center / cover;
+      background: url('../img/stage-media.png') no-repeat center / 300px 140px;
     }
     
     &:nth-child(5) {
       margin: 0;
-      padding: 30px 0 30px 40px;
-      background: url('../img/stage-square.png') no-repeat center / cover;
+      padding: 30px 0;
+      background: url('../img/stage-square.png') no-repeat center / 300px 140px;
       
       &::after {
         display: none;
@@ -117,7 +94,7 @@
     &::after {
       content: '';
       position: absolute;
-      bottom: -30px;
+      bottom: -16px;
       left: 50%;
       width: 90px;
       height: 30px;
