--- a/study-ex/app/sass/style.scss
+++ b/study-ex/app/sass/style.scss
@@ -12,6 +12,7 @@
 @import 'blocks/button';
 @import 'blocks/waiting';
 @import 'blocks/programs';
+@import 'blocks/register';
 @import 'blocks/footer';
 
 @import 'blocks/thankyou';
