--- a/study-ex/app/sass/blocks/programs.scss
+++ b/study-ex/app/sass/blocks/programs.scss
@@ -1,5 +1,5 @@
 .programs {
-  padding: 30px 0 0 0;
+  padding: 60px 0 0 0;
 }
 
 .programs__list {
@@ -20,6 +20,7 @@
   &:hover,
   &:focus {
     box-shadow: 0px 35px 49.6px 12.4px rgba(1, 26, 76, 0.4);
+    transform: scale(1.01);
   }
 }
 
