--- a/study-ex/app/sass/blocks/header.scss
+++ b/study-ex/app/sass/blocks/header.scss
@@ -5,7 +5,7 @@
   padding: 10px 0;
   background: rgba(255, 255, 255, 0.95);
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.15);
-  // z-index: 2;
+  z-index: 2;
 }
 
 @media screen and ($tablet-widths) {}
