--- a/study-ex/app/sass/blocks/title.scss
+++ b/study-ex/app/sass/blocks/title.scss
@@ -1,6 +1,6 @@
 .title {
-  padding: 180px 0 20px 0;
-  background: url('../img/title-bg.webp') no-repeat right / contain;
+  padding: 180px 0 0 0;
+  background: url('../img/title-bg.png') no-repeat center / contain;
 }
 
 .title__wrapper {
@@ -24,5 +24,35 @@
   
   &:last-child {
     padding: 0 0 0 40px;
+  }
+}
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .title {
+    background: #fff;
+  }
+  
+  .title__wrapper {
+    width: 100%;
+  }
+  
+  .title__flex {
+    flex-direction: column;
+  }
+  
+  .title__text {
+    font-size: 16px;
+    
+    &:first-child {
+      padding: 0;
+      border-right: none;
+      border-bottom: 2px solid $main-red;
+    }
+    
+    &:last-child {
+      padding: 0;
+    }
   }
 }
