--- a/study-ex/app/sass/blocks/waiting.scss
+++ b/study-ex/app/sass/blocks/waiting.scss
@@ -1,6 +1,8 @@
 .waiting {
-  padding: 120px 0;
-  background: url('../img/waiting-bg.webp') no-repeat top / cover;
+  position: relative;
+  padding: 140px 0;
+  background: url('../img/waiting-bg.png') no-repeat center / cover;
+  z-index: 1;
 }
 
 .waiting__content {
@@ -10,14 +12,15 @@
 
 .waiting__subheading {
   display: block;
-  margin: 10px 0 30px 0;
+  margin: 0 0 30px 0;
   color: #2f2f2f;
   font-size: 24px;
   font-weight: normal;
+  font-family: 'Book Antiqua', 'Open Sans', 'Arial', sans-serif;
 }
 
 .waiting__list {
-  margin: 0 0 30px 0;
+  margin: 0 0 10px 0;
   padding: 0 0 0 20px;
   list-style: none;
 }
@@ -33,8 +36,8 @@
   }
   
   &--new {
-    padding: 10px;
-    background: #ffd491;
+    padding: 5px;
+    background: #ffc76e;
   }
   
   &::before {
