--- a/study-ex/app/sass/style.scss
+++ b/study-ex/app/sass/style.scss
@@ -12,6 +12,10 @@
 @import 'blocks/button';
 @import 'blocks/waiting';
 @import 'blocks/programs';
+@import 'blocks/members';
+@import 'blocks/seminars';
+@import 'blocks/table';
+@import 'blocks/address';
 @import 'blocks/register';
 @import 'blocks/footer';
 
